--- a/subprojects/docs/src/docs/userguide/gradleWrapper.adoc
+++ b/subprojects/docs/src/docs/userguide/gradleWrapper.adoc
@@ -15,7 +15,7 @@
 [[gradle_wrapper]]
 == The Gradle Wrapper
 
-The recommended way to execute any Gradle build is with the help of the Gradle Wrapper (in short just “Wrapper”). The Wrapper is a feature that makes is extremely easy to execute a Gradle project without a Gradle installation. Upon invocation, it can _automatically download, unpack and install the Gradle runtime with a predefined version_ and use it to execute the build. As a result, developers can get up and running with a Gradle project quickly without having to follow manual installation processes saving your company time and money.
+The recommended way to execute any Gradle build is with the help of the Gradle Wrapper (in short just “Wrapper”). The Wrapper is a script that invokes a declared version of Gradle, downloading it beforehand if necessary. As a result, developers can get up and running with a Gradle project quickly without having to follow manual installation processes saving your company time and money.
 
 +++++
 <figure xmlns:xi="http://www.w3.org/2001/XInclude">
@@ -33,62 +33,14 @@ The recommended way to execute any Gradle build is with the help of the Gradle W
 
 **So how does it work? For a user there are typically three different workflows:**
 
-- You set up a new Gradle project and want to <<sec:adding_wrapper,add the Wrapper>> to it.
-- You want to <<sec:executing_wrapper,run a project with the Wrapper>> that already provides it.
-- You want to <<sec:upgrading_wrapper,upgrade the Wrapper>> to a new version of Gradle.
+- You set up a new Gradle project and want to <<sec:add_wrapper,add the Wrapper>> to it.
+- You want to <<sec:use_wrapper,run a project with the Wrapper>> that already provides it.
+- You want to <<sec:upgrade_wrapper,upgrade the Wrapper>> to a new version of Gradle.
 
 The following sections explain each of these use cases in more detail.
 
-[[sec:project_wrapper_enabled]]
-=== Is my project Wrapper-enabled?
-
-How do you know that a project already uses the Wrapper? The Wrapper consists of a set of files checked into version control together with your project source code. Let’s have a look at the following project layout to illustrate the expected Wrapper files:
-
-----
-.
-├── build.gradle
-├── settings.gradle
-├── gradle
-│   └── wrapper
-│       ├── gradle-wrapper.jar
-│       └── gradle-wrapper.properties
-├── gradlew
-└── gradlew.bat
-----
-
-A Gradle project typically provides a `build.gradle` and a `settings.gradle` file. The Wrapper files live alongside in the `gradle` directory and the root directory of the project. The following table explains their purpose.
-
-.Generated Wrapper files
-[options="header"]
-|===
-|File(s)                     |Description
-|`gradle-wrapper.jar`        |The Wrapper JAR file containing code for downloading the Gradle distribution.
-|`gradle-wrapper.properties` |A properties file responsible for configuring the Wrapper runtime behavior e.g. the Gradle version compatible with this version.
-|`gradlew`, `gradlew.bat`    | A shell script and a Windows batch script for executing the build with the Wrapper.
-|===
-
-If you happen to find those files in your project then you are all set. You can go ahead and <<sec:executing_wrapper,execute the build with the Wrapper>> without having to install the Gradle runtime. If the project you are working on does not contain those Wrapper files then you’ll need to <<sec:adding_wrapper,generate them>>.
-
-[[sec:executing_wrapper]]
-=== Executing the build with the Wrapper
-
-It is recommended to always execute a build with the Wrapper to ensure a reliable, controlled and standardized execution of the build. Using the Wrapper looks almost exactly like running the build with a Gradle installation. Depending on the operation system you either run `gradlew` or `gradlew.bat` instead of the `gradle` command. The following console output demonstrate the use of the Wrapper on a Windows machine for a Java-based project.
-
-++++
-<sample xmlns:xi="http://www.w3.org/2001/XInclude" dir="userguide/wrapper" id="wrapperBatchFileExecution" title="Executing the build with the Wrapper batch file">
-    <output executable="gradlew.bat" args="build" />
-</sample>
-++++
-
-In case the Gradle distribution is not available on the machine, the Wrapper will download it and store in the local file system. Any subsequent build invocation is going to reuse the existing local distribution as long as the distribution URL in the Gradle properties doesn't change.
-
-[NOTE]
-====
-The Wrapper shell script and batch file reside in the root directory of a single or multi-project Gradle build. You will need to reference the correct path to those files in case you want to execute the build from a subproject directory e.g. `../../gradlew tasks`.
-====
-
-[[sec:adding_wrapper]]
-=== Adding a Wrapper to a project
+[[sec:add_wrapper]]
+=== Add Gradle Wrapper
 
 Generating the Wrapper files requires an installed version of the Gradle runtime on your machine as described in <<installation>>. Thankfully, generating the initial Wrapper files is a one-time process.
 
@@ -151,18 +103,57 @@ distributionUrl=https\://services.gradle.org/distributions/gradle-4.0-all.zip
 ----
 ====
 
-[[sec:upgrading_wrapper]]
-=== Upgrading an existing Wrapper
+Let’s have a look at the following project layout to illustrate the expected Wrapper files:
 
-Projects will typically want to keep up with the times and upgrade their Gradle version to benefit from new features and improvements. One way to upgrade the Gradle version is manually change the `distributionUrl` property in the Wrapper property file. The better and recommended option is to run the `wrapper` task and provide the target Gradle version as described in <<sec:adding_wrapper>>. Using the `wrapper` task ensures that any optimizations made to the Wrapper shell script or batch file with that specific Gradle version are applied to the project. As usual you’d commit the changes to the Wrapper files to version control.
+----
+.
+├── build.gradle
+├── settings.gradle
+├── gradle
+│   └── wrapper
+│       ├── gradle-wrapper.jar
+│       └── gradle-wrapper.properties
+├── gradlew
+└── gradlew.bat
+----
 
-The following console outputs demonstrate the Wrapper upgrade process from Gradle version 4.0 to 4.2.1.
+A Gradle project typically provides a `build.gradle` and a `settings.gradle` file. The Wrapper files live alongside in the `gradle` directory and the root directory of the project. The following table explains their purpose.
+
+.Generated Wrapper files
+[options="header"]
+|===
+|File(s)                     |Description
+|`gradle-wrapper.jar`        |The Wrapper JAR file containing code for downloading the Gradle distribution.
+|`gradle-wrapper.properties` |A properties file responsible for configuring the Wrapper runtime behavior e.g. the Gradle version compatible with this version.
+|`gradlew`, `gradlew.bat`    | A shell script and a Windows batch script for executing the build with the Wrapper.
+|===
+
+You can go ahead and <<sec:use_wrapper,execute the build with the Wrapper>> without having to install the Gradle runtime. If the project you are working on does not contain those Wrapper files then you’ll need to <<sec:add_wrapper,generate them>>.
+
+[[sec:use_wrapper]]
+=== Use Gradle Wrapper
+
+It is recommended to always execute a build with the Wrapper to ensure a reliable, controlled and standardized execution of the build. Using the Wrapper looks almost exactly like running the build with a Gradle installation. Depending on the operation system you either run `gradlew` or `gradlew.bat` instead of the `gradle` command. The following console output demonstrate the use of the Wrapper on a Windows machine for a Java-based project.
 
 ++++
-<sample xmlns:xi="http://www.w3.org/2001/XInclude" dir="userguide/wrapper" id="wrapperGradleVersionBeforeUpgrade" title="Checking the version of the existing Wrapper">
-    <output executable="./gradlew" args="-v" />
+<sample xmlns:xi="http://www.w3.org/2001/XInclude" dir="userguide/wrapper" id="wrapperBatchFileExecution" title="Executing the build with the Wrapper batch file">
+    <output executable="gradlew.bat" args="build" />
 </sample>
 ++++
+
+In case the Gradle distribution is not available on the machine, the Wrapper will download it and store in the local file system. Any subsequent build invocation is going to reuse the existing local distribution as long as the distribution URL in the Gradle properties doesn't change.
+
+[NOTE]
+====
+The Wrapper shell script and batch file reside in the root directory of a single or multi-project Gradle build. You will need to reference the correct path to those files in case you want to execute the build from a subproject directory e.g. `../../gradlew tasks`.
+====
+
+[[sec:upgrade_wrapper]]
+=== Upgrade Gradle Wrapper
+
+Projects will typically want to keep up with the times and upgrade their Gradle version to benefit from new features and improvements. One way to upgrade the Gradle version is manually change the `distributionUrl` property in the Wrapper property file. The better and recommended option is to run the `wrapper` task and provide the target Gradle version as described in <<sec:add_wrapper>>. Using the `wrapper` task ensures that any optimizations made to the Wrapper shell script or batch file with that specific Gradle version are applied to the project. As usual you’d commit the changes to the Wrapper files to version control.
+
+Use the Gradle `wrapper` task to generate the wrapper, specifying a version. The default is the current version, which you can check by executing `./gradlew --version`.
 
 ++++
 <sample xmlns:xi="http://www.w3.org/2001/XInclude" dir="userguide/wrapper" id="wrapperGradleVersionUpgrade" title="Upgrading the Wrapper version">
@@ -176,8 +167,8 @@ The following console outputs demonstrate the Wrapper upgrade process from Gradl
 </sample>
 ++++
 
-[[customizing_wrapper]]
-=== Customizing the Wrapper
+[[customize_wrapper]]
+=== Customize Gradle Wrapper
 
 Most users of Gradle are happy with the default runtime behavior of the Wrapper. However, organizational policies, security constraints or personal preferences might require you to dive deeper into customizing the Wrapper. Thankfully, the built-in `wrapper` task exposes numerous options to bend the runtime behavior to your needs. Most configuration options are exposed by the underlying task type api:org.gradle.api.tasks.wrapper.Wrapper[].
 
@@ -249,23 +240,7 @@ To enable this feature, download the `.sha256` file associated with the Gradle d
 
 ===== Downloading the SHA-256 file
 
-You can download the `.sha256` file by clicking on one of the `sha256` links on whichever page you used to download your distribution:
-
-* https://gradle.org/install
-* https://gradle.org/releases
-* https://gradle.org/release-candidate
-* https://gradle.org/nightly
-
-+++++
-<figure xmlns:xi="http://www.w3.org/2001/XInclude">
-    <title>The SHA-256 link on the installation page</title>
-    <imageobject>
-        <imagedata fileref="img/sha256-link-installation-page.png" width="200mm" />
-    </imageobject>
-</figure>
-+++++
-
-The format of the file is a single line of text that is the SHA-256 hash of the corresponding zip file.
+You can download the `.sha256` file from https://services.gradle.org/distributions/ (stable releases) or https://services.gradle.org/distributions-snapshots/ (release candidate and nightly releases). The format of the file is a single line of text that is the SHA-256 hash of the corresponding zip file.
 
 ===== Configuring checksum verification
 
@@ -281,9 +256,3 @@ distributionSha256Sum=371cb9fbebbe9880d147f59bab36d61eee122854ef8c9ee1ecf12b8236
 ====
 
 Gradle will report a build failure in case the configured checksum does not match the checksum found on the server for hosting the distribution. Checksum Verification is only performed if the configured Wrapper distribution hasn't been downloaded yet.
-
-++++
-<sample xmlns:xi="http://www.w3.org/2001/XInclude" dir="userguide/wrapper" id="wrapperChecksumVerificationFailure" title="Checksum verification failure">
-    <output executable="./gradlew" args="help" />
-</sample>
-++++
