Use warningType instead of warningTypes
Signed-off-by: Bo Zhang <bo@gradle.com>

--- a/subprojects/docs/src/docs/userguide/commandLineInterface.adoc
+++ b/subprojects/docs/src/docs/userguide/commandLineInterface.adoc
@@ -282,10 +282,12 @@ By default, to avoid bothering users, Gradle won't display all warnings (e.g. de
 There're <number> deprecation warnings, which may break the build in Gradle 5.0. Please run with --warnings=all to see them.
 ----
 
-`--warnings=(all,none)`::
+`--warnings=(all,summary,none)`::
 Specifies which type of warnings to display.
 +
 Set to `all` to display all warnings.
++
+Set to `summary` to suppress all warnings and display a summary at the end of the build.
 +
 Set to `none` to suppress all warnings, including the summary at the end of the build.
 
