--- a/platforms/documentation/docs/src/docs/userguide/releases/upgrading/upgrading_version_8.adoc
+++ b/platforms/documentation/docs/src/docs/userguide/releases/upgrading/upgrading_version_8.adoc
@@ -41,6 +41,7 @@ The previous step will help you identify potential problems by issuing deprecati
 
 === Language and DSL changes
 
+[[kotlin-2]]
 ==== Upgrade to Kotlin 2.1.21
 
 Gradle now embeds Kotlin 2.1.21, upgrading from the previously embedded version 2.0.21.
@@ -63,6 +64,7 @@ If they are used to reference a top-level symbol that happens to have the same n
 
 Read the link:#jspecify[JSpecify section] below to learn about potential breaking changes in Kotlin build logic code related to nullability.
 
+[[groovy-4]]
 ==== Upgrade to Groovy 4.0.27
 
 Groovy has been upgraded from version 3.0.24 to https://groovy-lang.org/changelogs/changelog-4.0.27.html[4.0.27].
